# swarm-robot-gui

./: noted  readme.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/aruco/: arUco_generate.py  arUco_multiGenerate.py  check_marker.py  check_opencv.py
ros2_ws/src/gui_pkg/: package.xml  setup.py
ros2_ws/src/gui_pkg/gui_pkg/: bridge.py
ros2_ws/src/path_executor/: setup.cfg  setup.py
ros2_ws/src/path_planner/: package.xml  setup.py
ros2_ws/src/role_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/rviz2/: swarm.rviz
ros2_ws/src/swarm_launch/: setup.cfg  setup.py
ros2_ws/src/vision_node/: package.xml  setup.py
webots/controllers/gps_and_imu/: gps_and_imu.py
webots/controllers/gps_only/: gps_only.py
webots/controllers/multi_imu_cek/: multi_imu_cek.py
webots/controllers/random_spawn_test/: random_spawn_test.py
webots/controllers/read_imu_rotation/: read_imu_rotation.py
webots/controllers/robot_controller_node/: robot_controller_node.py
webots/controllers/target_spawner/: target_spawner.py
webots/controllers/target_spawner_node/: target_spawner_node.py
webots/model/maze/: simple_maze.blend  tes1.mtl  tes2.mtl  tes4.mtl
webots/model/model/: ball.mtl  body_black.mtl
webots/model/new design/: body.mtl  kiri_belakang.mtl
webots/model/old design/: body.mtl  (+4 more)
webots/worlds/: .backup.wbproj  .leader_follower_swarm_robot.wbproj  .path.wbproj  .path_planning_simulation.wbproj  .swarm.wbproj  .tes.wbproj  backup.wbt  swarm.wbt  swarm_bu.wbt  swarm_c.wbt  tes.wbt
(+51 files in other folders)
